--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -21,7 +21,9 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    "typeRoots": ["types", "node_modules/@types"]  // ✅ Add this line
   },
-  "include": ["src"]
+  "include": ["src", "src/types"]  // ✅ Add "types" here too
 }
